# tap-fireblocks

./: .env.example  .gitignore  README.md  pyproject.toml
tap_fireblocks/: auth.py  client.py  pagination.py  streams.py  tap.py
tests/: conftest.py  test_auth.py  test_client.py  test_pagination.py  test_streams.py  test_transactions_windowing.py
