[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tap-fireblocks"
version = "0.1.0"
description = "Singer tap for the Fireblocks API."
requires-python = ">=3.10"
dependencies = [
  "singer-sdk>=0.40,<1.0",
  "requests>=2.31,<3.0",
  "pyjwt[crypto]>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tap-fireblocks = "tap_fireblocks.tap:TapFireblocks.cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tap_fireblocks*"]
